--- a/public/css/skeletor-pygments.css
+++ b/public/css/skeletor-pygments.css
@@ -4,6 +4,32 @@
  *
  * Code licensed under the MIT license
  */
+
+.highlight pre code * {
+  white-space: nowrap;    // this sets all children inside to nowrap
+}
+
+.highlight pre {
+  overflow-x: auto;       // this sets the scrolling in x
+}
+
+.highlight pre code {
+  white-space: pre;       // forces <code> to respect <pre> formatting
+}
+
+code[class^="language-"] {
+  color: white;
+}
+
+pre {
+  color: white;
+  background-color: #304c60;
+  border-color: black;
+  border-width: 2px;
+  border-style: solid;
+  border-radius: 5px;
+}
+
 .highlight .hll {
   background-color: #2b2836; }
 
