--- a/public/css/blackdoc.css
+++ b/public/css/blackdoc.css
@@ -6,59 +6,27 @@ ______ _            _   ______
 | |_/ / | (_| | (__|   <| |/ / (_) | (__
 \____/|_|\__,_|\___|_|\_\___/ \___/ \___|
 
- *
  * Designed, built, and released under MIT license by @karloespiritu.
  */
 
-
-/*
- * Contents
- *
- * Global resets
- * Sidebar
- * Container
- * Reverse layout
- * Themes
- * Scrollbar
- */
-
-
-/*
- * Global resets
- *
- * Update the foundational and global aspects of the page.
- */
-
-html {
-  font-family: "PT Sans", Helvetica, Arial, sans-serif;
-}
-
-body {
-  color: #848482;
-  background-color: #000000;
-}
+html { font-family: "Meslo", Helvetica, Arial, sans-serif; }
+body { color: #848482; background-color: #000000; }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'EB Garamond', serif;
+  font-family: 'PragmataPro for Powerline', sans-serif;
   color: #aaa;
 }
 
 h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
-  font-family: 'EB Garamond', serif;
+  font-family: 'PragmataPro for Powerline', sans-serif;
   color: #50585D;
   font-kerning: auto;
   font-feature-settings: "kern","liga","dlig","hlig","cswh";
   font-synthesis: weight style;
 }
 
-a {
-  color: #ffeb99;
-  transition: color ease 0.3s;
-}
-
-a:hover {
-  color: #caad00;
-}
+a { color: #ffeb99; transition: color ease 0.3s; }
+a:hover { color: #6a8c8c; }
 
 .btn {
   display: inline-block;
@@ -76,10 +44,7 @@ a:hover {
   border-color: #ebcb8b;
 }
 
-strong, b {
-  color: #848471;
-}
-/* Code */
+strong, b { color: #848471; }
 
 code {
   color: #bbbbbb;
@@ -89,9 +54,9 @@ code {
 
 pre {
   background-color: #2b2836;
+  white-space: pre;
+  max-height: 800px;
 }
-
-pre { white-space: pre; overflow: auto !important; }
 
 hr {
   display: block;
@@ -107,8 +72,7 @@ blockquote {
   border-left: .25rem solid #333;
 }
 
-td,
-th {
+td, th {
   padding: .25rem .5rem;
   border: 1px solid #333;
 }
@@ -119,59 +83,21 @@ tbody tr:nth-child(odd) th {
 }
 
 /* Pagination items can be `span`s or `a`s */
-.pagination-item {
-  border: 1px solid #444;
-}
+.pagination-item { border: 1px solid #444; }
 
 @media (min-width: 48em) {
-  html {
-    font-size: 16px;
-  }
+  html { font-size: 16px; }
 }
 @media (min-width: 58em) {
-  html {
-    font-size: 20px;
-  }
+  html { font-size: 20px; }
 }
 
-/*
- * Messages
- *
- * Show alert messages to users. You may add it to single elements like a `<p>`,
- * or to a parent if there are multiple elements to show.
- */
-
-.message {
-  color: #bbb;
-  background-color: #333;
-}
-
-/* Gist */
-.gist-data {
-  background-color: #222 !important;
-  border-bottom: 1px solid #333 !important;;
-}
-.gist .markdown-body {
-  color: #999 !important;
-}
-
-.gist .markdown-body pre {
-  background-color: #111 !important;
-}
-
-.gist-file {
-  border: 1px solid #333 !important;;
-}
-
-.gist-meta {
-  background-color: #222 !important;
-}
-/*
- * Sidebar
- *
- * Flexible banner for housing site name, intro, and "footer" content. Starts
- * out above content in mobile and later moves to the side with wider viewports.
- */
+.message { color: #3D8D8D; background-color: #0a0f0f; }
+.gist-data { background-color: #222 !important; border-bottom: 1px solid #333 !important; }
+.gist .markdown-body { color: #999 !important; }
+.gist .markdown-body pre { background-color: #111 !important; }
+.gist-file { border: 1px solid #333 !important;; }
+.gist-meta { background-color: #222 !important; }
 
 .sidebar {
   text-align: center;
@@ -191,162 +117,58 @@ tbody tr:nth-child(odd) th {
   }
 }
 
-/* Sidebar links */
-.sidebar a {
-  color: #90a959;
-}
+.sidebar a { color: #6a8c8c; }
 
 /* About section */
 .sidebar-about h1 {
-  color: #90a959;
+  color: #6a8c8c;
   margin-top: 0;
-  font-family: 'Noto Serif', serif;
+  font-family: 'PragmataPro', serif;
   font-size: 2.25rem;
-
 }
 
-/* Sidebar nav */
-.sidebar-nav {
-  margin-bottom: 1rem;
-}
-.sidebar-nav-item {
-  display: block;
-  line-height: 1.75;
-}
+.sidebar-nav { margin-bottom: 1rem; }
+.sidebar-nav-item { display: block; line-height: 1.75; }
 a.sidebar-nav-item:hover,
-a.sidebar-nav-item:focus {
-  text-decoration: underline;
-}
-.sidebar-nav-item.active {
-  font-weight: bold;
-}
-
-/* Sticky sidebar
- *
- * Add the `sidebar-sticky` class to the sidebar's container to affix it the
- * contents to the bottom of the sidebar in tablets and up.
- */
+a.sidebar-nav-item:focus { text-decoration: underline; }
+.sidebar-nav-item.active { font-weight: bold; }
 
 @media (min-width: 48em) {
   .sidebar-sticky {
-/*    position: absolute;*/
+    /*position: absolute;*/ /* to draw bottom */
     right:  1rem;
     bottom: 1rem;
     left:   1rem;
   }
 }
 
-
-/* Container
- *
- * Align the contents of the site above the proper threshold with some margin-fu
- * with a 25%-wide `.sidebar`.
- */
-
-.content {
-  padding-top:    4rem;
-  padding-bottom: 4rem;
+.content { padding-top: 4rem; padding-bottom: 4rem; }
+@media (min-width: 48em) {
+  .content { max-width: 38rem; margin-left: 20rem; margin-right: 2rem; }
+}
+@media (min-width: 64em) {
+  .content { margin-left: 22rem; margin-right: 4rem; }
 }
 
+.page-title, .post-title, .post-title a { color: #6a8c8c; }
+
 @media (min-width: 48em) {
-  .content {
-    max-width: 38rem;
-    margin-left: 20rem;
-    margin-right: 2rem;
-  }
+  .layout-reverse .sidebar { left: auto; right: 0; }
+  .layout-reverse .content { margin-left: 2rem; margin-right: 20rem; }
 }
 
 @media (min-width: 64em) {
-  .content {
-    margin-left: 22rem;
-    margin-right: 4rem;
-  }
+  .layout-reverse .content { margin-left: 4rem; margin-right: 22rem; }
 }
 
-/*
- * Posts and pages
- *
- * Each post is wrapped in `.post` and is used on default and post layouts. Each
- * page is wrapped in `.page` and is only used on the page layout.
- */
-
-/* Blog post or page title */
-.page-title,
-.post-title,
-.post-title a {
-  color: #caad00;
-}
-
-/*
- * Reverse layout
- *
- * Flip the orientation of the page by placing the `.sidebar` on the right.
- */
-
-@media (min-width: 48em) {
-  .layout-reverse .sidebar {
-    left: auto;
-    right: 0;
-  }
-  .layout-reverse .content {
-    margin-left: 2rem;
-    margin-right: 20rem;
-  }
-}
-
-@media (min-width: 64em) {
-  .layout-reverse .content {
-    margin-left: 4rem;
-    margin-right: 22rem;
-  }
-}
-
-/*
- * Themes
- *
- * BlackDoc includes optional themes to color the sidebar and links
- * within blog posts. To use, add the class of your choosing to the `body`.
- */
-
-/* Base16 (http://chriskempson.github.io/base16/#default) */
-
-.theme-base-0b .sidebar {
-  background-color: #00000;
-}
-.theme-base-0b .content a,
-.theme-base-0b .related-posts li a:hover {
-  color: #90a959;
-}
-
-/* Blue */
-.theme-base-0d .sidebar {
-  background-color: #6a9fb5;
-}
+.theme-base-0b .sidebar { background-color: #00000; }
+.theme-base-0b .content a, .theme-base-0b .related-posts li a:hover { color: #6a8c8c; }
+.theme-base-0d .sidebar { background-color: #6a8c8c; }
 .theme-base-0d .content a,
-.theme-base-0d .related-posts li a:hover {
-  color: #6a9fb5;
-}
+.theme-base-0d .related-posts li a:hover { color: #6a8c8c; }
 
-/* Thin Scrollbar */
-::-webkit-scrollbar {
-  width: 8px;
-}
-::-webkit-scrollbar-button {
-  width: 8px;
-  height:5px;
-}
-::-webkit-scrollbar-track {
-  background: #333;
-  border: thin solid #111;
-  /*box-shadow: 0px 0px 3px #111 inset;*/
-  border-radius:10px;
-}
-::-webkit-scrollbar-thumb {
-  background:#222;
-  border: thin solid #222;
-  border-radius:10px;
-}
-::-webkit-scrollbar-thumb:hover {
-  background:#7d7d7d;
-}
-
+::-webkit-scrollbar { width: 8px; }
+::-webkit-scrollbar-button { width: 8px; height:5px; }
+::-webkit-scrollbar-track { background: #333; border: thin solid #111; /*box-shadow: 0px 0px 3px #111 inset;*/ border-radius:10px; }
+::-webkit-scrollbar-thumb { background:#222; border: thin solid #222; border-radius:10px; }
+::-webkit-scrollbar-thumb:hover { background:#7d7d7d; }
