update css path

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,7 +15,7 @@
   </title>
 
   <!-- CSS -->
-  <link rel="stylesheet" href="{{ site.baseurl }}public/css/blackdoc.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}public/css/neg.css">
   <link rel="stylesheet" href="{{ site.baseurl }}public/css/syntax.css">
   <!-- Icons -->
   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.baseurl }}public/apple-touch-icon-144-precomposed.png">
