--- a/public/css/syntax.css
+++ b/public/css/syntax.css
@@ -1,70 +1,72 @@
-.highlight .c { color: #655e7f; }  /* Comment */
-.highlight .err { color: #f36a66; background-color: #bd93f9; }  /* Error */
-.highlight .language-css .k { color: #93b4ff; }  /* Keyword */
-.highlight .k { color: #f3e4a2; }  /* Keyword */
-.highlight .l { color: #bd93f9; }  /* Literal */
-.highlight .n { color: #dce7fd; }  /* Name */
-.highlight .o { color: #f3e4a2; }  /* Operator */
-.highlight .language-scss .o { color: #dce7fd; }  /* Operator */
-.highlight .language-css .o { color: #dce7fd; }  /* Operator */
-.highlight .p { color: #dce7fd; }  /* Punctuation */
-.highlight .cm { color: #655e7f; }  /* Comment.Multiline */
-.highlight .cp { color: #655e7f; }  /* Comment.Preproc */
-.highlight .c1 { color: #655e7f; }  /* Comment.Single */
-.highlight .cs { color: #655e7f; }  /* Comment.Special */
+.highlight { margin-bottom: 1rem; border-radius: 4px; }
+.highlight pre { margin-bottom: 0; }
+.highlight .c { color: #899CA1; }  /* Comment */
+.highlight .err { color: #f36a66; background-color: #7F62B3; }  /* Error */
+.highlight .language-css .k { color: #287373; }  /* Keyword */
+.highlight .k { color: #2B7694; font-style:bold;}  /* Keyword */
+.highlight .l { color: #7F62B3; }  /* Literal */
+.highlight .n { color: #7F62B3; }  /* Name */
+.highlight .o { color: #2B7694; font-style:bold;}  /* Operator */
+.highlight .language-scss .o { color: #7F62B3; }  /* Operator */
+.highlight .language-css .o { color: #7F62B3; }  /* Operator */
+.highlight .p { color: #7F62B3; }  /* Punctuation */
+.highlight .cm { color: #899CA1; }  /* Comment.Multiline */
+.highlight .cp { color: #899CA1; }  /* Comment.Preproc */
+.highlight .c1 { color: #899CA1; }  /* Comment.Single */
+.highlight .cs { color: #899CA1; }  /* Comment.Special */
 .highlight .ge { font-style: italic; }  /* Generic.Emph */
 .highlight .gs { font-weight: bold; }  /* Generic.Strong */
-.highlight .kc { color: #bd93f9; } /* Keyword.Constant */
-.highlight .kd { color: #bd93f9; }  /* Keyword.Declaration */
+.highlight .kc { color: #7F62B3; } /* Keyword.Constant */
+.highlight .kd { color: #7F62B3; }  /* Keyword.Declaration */
 .highlight .kn { color: #ff8adb; }  /* Keyword.Namespace */
-.highlight .kp { color: #bd93f9; }  /* Keyword.Pseudo */
-.highlight .kr { color: #bd93f9; }  /* Keyword.Reserved */
+.highlight .kp { color: #7F62B3; }  /* Keyword.Pseudo */
+.highlight .kr { color: #7F62B3; }  /* Keyword.Reserved */
 .highlight .kt { color: #ff8adb; }  /* Keyword.Type */
-.highlight .ld { color: #dce7fd; }  /* Literal.Date */
+.highlight .ld { color: #7F62B3; }  /* Literal.Date */
 .highlight .m { color: #ff8adb; }  /* Literal.Number */
-.highlight .s { color: #93b4ff; }  /* Literal.String */
-.highlight .na { color: #93b4ff; }  /* Name.Attribute */
-.highlight .language-html .na { color: #bd93f9; }  /* Name.Attribute */
-.highlight .nb { color: #84fba2; }  /* Name.Builtin */
-.highlight .language-scss .nb { color: #bd93f9; } /* Name.Builtin */
-.highlight .nc { color: #bd93f9; }  /* Name.Class */
-.highlight .no { color: #bd93f9; }  /* Name.Constant */
-.highlight .nd { color: #bd93f9; }  /* Name.Decorator */
-.highlight .ni { color: #dce7fd; }  /* Name.Entity */
-.highlight .ne { color: #84fba2; }  /* Name.Exception */
-.highlight .nf { color: #84fba2; }  /* Name.Function */
-.highlight .language-scss .nf { color: #bd93f9; }  /* Name.Function */
-.highlight .nl { color: #dce7fd; }  /* Name.Label */
-.highlight .nn { color: #dce7fd; }  /* Name.Namespace */
-.highlight .nx { color: #dce7fd; }  /* Name.Other */
-.highlight .py { color: #dce7fd; }  /* Name.Property */
-.highlight .nt { color: #f3e4a2; }  /* Name.Tag */
-.highlight .nv { color: #dce7fd; }  /* Name.Variable */
-.highlight .ow { color: #f3e4a2; }  /* Operator.Word */
-.highlight .w { color: #dce7fd; }  /* Text.Whitespace */
+.highlight .s { color: #287373; }  /* Literal.String */
+.highlight .na { color: #287373; }  /* Name.Attribute */
+.highlight .language-html .na { color: #7F62B3; }  /* Name.Attribute */
+.highlight .nb { color: #5c9caa; }  /* Name.Builtin */
+.highlight .language-scss .nb { color: #7F62B3; } /* Name.Builtin */
+.highlight .nc { color: #7F62B3; }  /* Name.Class */
+.highlight .no { color: #7F62B3; }  /* Name.Constant */
+.highlight .nd { color: #7F62B3; }  /* Name.Decorator */
+.highlight .ni { color: #7F62B3; }  /* Name.Entity */
+.highlight .ne { color: #5c9caa; }  /* Name.Exception */
+.highlight .nf { color: #5c9caa; }  /* Name.Function */
+.highlight .language-scss .nf { color: #7F62B3; }  /* Name.Function */
+.highlight .nl { color: #7F62B3; }  /* Name.Label */
+.highlight .nn { color: #7F62B3; }  /* Name.Namespace */
+.highlight .nx { color: #7F62B3; }  /* Name.Other */
+.highlight .py { color: #7F62B3; }  /* Name.Property */
+.highlight .nt { color: #2B7694; font-style:bold;}  /* Name.Tag */
+.highlight .nv { color: #7F62B3; }  /* Name.Variable */
+.highlight .ow { color: #2B7694; font-style:bold; }  /* Operator.Word */
+.highlight .w { color: #7F62B3; }  /* Text.Whitespace */
 .highlight .mf { color: #ff8adb; }  /* Literal.Number.Float */
-.highlight .mh { color: #bd93f9; }  /* Literal.Number.Hex */
-.highlight .mi { color: #bd93f9; }  /* Literal.Number.Integer */
+.highlight .mh { color: #7F62B3; }  /* Literal.Number.Hex */
+.highlight .mi { color: #7F62B3; }  /* Literal.Number.Integer */
 .highlight .mo { color: #ff8adb; }  /* Literal.Number.Oct */
-.highlight .sb { color: #93b4ff; }  /* Literal.String.Backtick */
-.highlight .sc { color: #93b4ff; }  /* Literal.String.Char */
-.highlight .sd { color: #93b4ff; }  /* Literal.String.Doc */
-.highlight .s2 { color: #93b4ff; }  /* Literal.String.Double */
-.highlight .language-scss .s2 { color: #dce7fd; }  /* Literal.String.Double */
-.highlight .language-css .s2 { color: #dce7fd; }  /* Literal.String.Double */
+.highlight .sb { color: #287373; }  /* Literal.String.Backtick */
+.highlight .sc { color: #287373; }  /* Literal.String.Char */
+.highlight .sd { color: #287373; }  /* Literal.String.Doc */
+.highlight .s2 { color: #287373; }  /* Literal.String.Double */
+.highlight .language-scss .s2 { color: #7F62B3; }  /* Literal.String.Double */
+.highlight .language-css .s2 { color: #7F62B3; }  /* Literal.String.Double */
 .highlight .se { color: #7b94a5; }  /* Literal.String.Escape */
-.highlight .sh { color: #93b4ff; }  /* Literal.String.Heredoc */
-.highlight .si { color: #93b4ff; }  /* Literal.String.Interpol */
-.highlight .sx { color: #93b4ff; }  /* Literal.String.Other */
-.highlight .sr { color: #93b4ff; }  /* Literal.String.Regex */
-.highlight .s1 { color: #93b4ff; }  /* Literal.String.Single */
-.highlight .ss { color: #93b4ff; }  /* Literal.String.Symbol */
-.highlight .bp { color: #dce7fd; }  /* Name.Builtin.Pseudo */
-.highlight .vc { color: #dce7fd; }  /* Name.Variable.Class */
-.highlight .vg { color: #dce7fd; }  /* Name.Variable.Global */
-.highlight .vi { color: #dce7fd; }  /* Name.Variable.Instance */
+.highlight .sh { color: #287373; }  /* Literal.String.Heredoc */
+.highlight .si { color: #287373; }  /* Literal.String.Interpol */
+.highlight .sx { color: #287373; }  /* Literal.String.Other */
+.highlight .sr { color: #287373; }  /* Literal.String.Regex */
+.highlight .s1 { color: #287373; }  /* Literal.String.Single */
+.highlight .ss { color: #287373; }  /* Literal.String.Symbol */
+.highlight .bp { color: #7F62B3; }  /* Name.Builtin.Pseudo */
+.highlight .vc { color: #7F62B3; }  /* Name.Variable.Class */
+.highlight .vg { color: #7F62B3; }  /* Name.Variable.Global */
+.highlight .vi { color: #7F62B3; }  /* Name.Variable.Instance */
 .highlight .il { color: #ff8adb; } /* Literal.Number.Integer.Long */
-.highlight .gu { color: #655e7f; }  /* Generic Heading & Diff Header */
+.highlight .gu { color: #899CA1; }  /* Generic Heading & Diff Header */
 .highlight .gd { color: #f36a66; }  /* Generic.Subheading & Diff Unified/Comment? */
-.highlight .gi { color: #84fba2; }  /* Generic.Deleted & Diff Deleted */
+.highlight .gi { color: #5c9caa; }  /* Generic.Deleted & Diff Deleted */
 .highlight .pre { overflow-y: scroll; overflow-x: scroll; overflow: scroll; } /* Generic.Inserted & Diff Inserted */
