--- a/public/css/neg.css
+++ b/public/css/neg.css
@@ -18,6 +18,12 @@
     src: url('/fonts/pragmata.ttf');
 }
 
+@font-face {
+    font-family: 'PragmataPro2bold';
+    font-style: bold;
+    src: url('/fonts/pragmata_bold.ttf');
+}
+
 * {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -105,7 +111,8 @@ strong, b { color: #848471; }
 code, pre {
     color: white;
     background-color: #101010;
-    font-size: 10pt;
+    font-size: 12pt;
+    font-family: "PragmataPro2";
     white-space: pre;
     border-color: black;
     border-width: 2px;
