--- a/public/css/neg.css
+++ b/public/css/neg.css
@@ -34,7 +34,6 @@ html, body { margin: 0; padding: 0; }
 
 html {
     font-family: "PragmataPro2", Helvetica, Arial, sans-serif;
-    font-size: 16px;
     line-height: 1.35;
 }
 
@@ -50,6 +49,7 @@ body {
     background-position: center top !important;
     -webkit-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%;
+    font-size: 14pt;
 }
 
 h1, h2, h3, h4, h5, h6 { 
