add google analytics

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,8 @@
     <div class="content container">
       {{ content }}
       {% include disqus.html %}
-    </div>
+      {% include google_analytics.html %}
+  </div>
 
   </body>
 </html>
