--- a/public/css/neg.css
+++ b/public/css/neg.css
@@ -50,6 +50,7 @@ body {
     -webkit-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%;
     font-size: 14pt;
+    text-align: justify;
 }
 
 h1, h2, h3, h4, h5, h6 { 
