--- a/public/css/neg.css
+++ b/public/css/neg.css
@@ -114,13 +114,13 @@ code, pre {
     background-color: #101010;
     font-size: 12pt;
     font-family: "PragmataPro2";
-    white-space: pre;
     border-color: black;
     border-width: 2px;
     border-style: solid;
     border-radius: 5px;
-    overflow: auto !important;
-    overflow-y: auto !important;
+    overflow: auto;
+    word-wrap: normal;
+    white-space: pre-wrap;
     max-height: 1024px;
 }
 
@@ -136,43 +136,12 @@ hr {
     border-bottom: 1px solid #fff;
 }
 
-abbr {
-    font-size: 85%;
-    font-weight: bold;
-    color: #555;
-    text-transform: uppercase;
-}
-abbr[title] {
-    cursor: help;
-    border-bottom: 1px dotted #e5e5e5;
-}
-
-
-/* Quotes */
-blockquote {
-    padding: .5rem 1rem;
-    margin: .8rem 0;
-    color: #666; 
-    border-left: .25rem solid #333;
-}
-blockquote p:last-child {
-    margin-bottom: 0;
-}
-@media (min-width: 30em) {
-    blockquote {
-        padding-right: 5rem;
-        padding-left: 1.25rem;
-    }
-}
-
-/* Tables */
-table {
-    margin-bottom: 1rem;
-    width: 100%;
-    border: 1px solid #e5e5e5;
-    border-collapse: collapse;
-}
-
+abbr { font-size: 85%; font-weight: bold; color: #555; text-transform: uppercase; }
+abbr[title] { cursor: help; border-bottom: 1px dotted #e5e5e5; }
+blockquote { padding: .5rem 1rem; margin: .8rem 0; color: #666; border-left: .25rem solid #333; }
+blockquote p:last-child { margin-bottom: 0; }
+@media (min-width: 30em) { blockquote { padding-right: 5rem; padding-left: 1.25rem; } }
+table { margin-bottom: 1rem; width: 100%; border: 1px solid #e5e5e5; border-collapse: collapse; }
 td, th { padding: .25rem .5rem; border: 1px solid #333; }
 /* tbody tr:nth-child(odd) td, */
 /* tbody tr:nth-child(odd) th { background-color: #2b2836; } */
@@ -194,28 +163,15 @@ td, th { padding: .25rem .5rem; border: 1px solid #333; }
 }
 
 /* Pagination items can be `span`s or `a`s */
-.pagination-item {
-    display: block;
-    padding: 1rem;
-    border: 1px solid #444;
-}
-.pagination-item:first-child {
-    margin-bottom: -1px;
-}
+.pagination-item { display: block; padding: 1rem; border: 1px solid #444; }
+.pagination-item:first-child { margin-bottom: -1px; }
 
 /* Only provide a hover state for linked pagination items */
-a.pagination-item:hover {
-    background-color: #f5f5f5;
-}
+a.pagination-item:hover { background-color: #f5f5f5; }
 
 @media (min-width: 30em) {
-    .pagination {
-        margin: 3rem 0;
-    }
-    .pagination-item {
-        float: left;
-        width: 50%;
-    }
+    .pagination { margin: 3rem 0; }
+    .pagination-item { float: left; width: 50%; }
     .pagination-item:first-child {
         margin-bottom: 0;
         border-top-left-radius:    4px;
@@ -240,15 +196,10 @@ a.pagination-item:hover {
 }
 
 
-/*
- * Container
- *
- * Center the page content.
- */
 .container {
     max-width: 38rem;
-    padding-left:  1rem;
-    padding-right: 1rem;
+    padding-left:  0rem;
+    padding-right: 0rem;
     margin-left:  auto;
     margin-right: auto;
 }
@@ -279,7 +230,6 @@ a.pagination-item:hover {
 @media (min-width: 48em) {
     .sidebar { position: fixed; top: 0; left: 0; bottom: 0; width: 18rem; text-align: left; }
 }
-
 .sidebar a { color: #6a8c8c; text-decoration: none; }
 
 /* About section */
@@ -309,9 +259,7 @@ a.sidebar-nav-item:focus { text-decoration: underline; }
 @media (min-width: 48em) {
     .content { max-width: 38rem; margin-left: 20rem; margin-right: 2rem; }
 }
-@media (min-width: 64em) {
-    .content { margin-left: 22rem; margin-right: 4rem; }
-}
+@media (min-width: 64em) { .content { margin-left: 22rem; margin-right: 4rem; } }
 
 /*
  * Posts and pages
@@ -323,47 +271,22 @@ a.sidebar-nav-item:focus { text-decoration: underline; }
 .page-title, .post-title, .post-title a { color: #6a8c8c; }
 .page-title, .post-title { margin-top: 0; }
 /* Meta data line below post title */
-.post-date {
-    display: block;
-    margin-top: -.5rem;
-    margin-bottom: 1rem;
-    color: #9a9a9a;
-}
+.post-date { display: block; margin-top: -.5rem; margin-bottom: 1rem; color: #9a9a9a; }
 
 /*
  * Custom type
  * Extend paragraphs with `.lead` for larger introductory text.
  */
-.lead {
-    font-size: 1.25rem;
-    font-weight: 300;
-}
+.lead { font-size: 1.25rem; font-weight: 300; }
 
 
 /* Related posts */
-.related {
-    padding-top: 2rem;
-    padding-bottom: 2rem;
-    border-top: 1px solid #eee;
-}
-.related-posts {
-    padding-left: 0;
-    list-style: none;
-}
-.related-posts h3 {
-    margin-top: 0;
-}
-.related-posts li small {
-    font-size: 75%;
-    color: #999;
-}
-.related-posts li a:hover {
-    color: #268bd2;
-    text-decoration: none;
-}
-.related-posts li a:hover small {
-    color: inherit;
-}
+.related { padding-top: 2rem; padding-bottom: 2rem; border-top: 1px solid #eee; }
+.related-posts { padding-left: 0; list-style: none; }
+.related-posts h3 { margin-top: 0; }
+.related-posts li small { font-size: 75%; color: #999; }
+.related-posts li a:hover { color: #268bd2; text-decoration: none; }
+.related-posts li a:hover small { color: inherit; }
 
 @media (min-width: 48em) {
     .layout-reverse .sidebar { left: auto; right: 0; }
@@ -405,23 +328,6 @@ img {
     padding: 0.25rem; !important
 }
 
-.img_noborder {
-    border: 1px solid;
-    border-color: #1f3b4f;
-}
-
-.about_table {
-    width: 150%;
-    table-layout: fixed;
-    text-align: left;
-    background:transparent;
-}
-
-.about_td {
-    border: 1;
-    border-spacing: 1;
-    padding: 1;
-    margin: 0;
-    border-color: transparent;
-    background-color: !transparent; !important
-}
+.img_noborder { border: 1px solid; border-color: #1f3b4f; }
+.about_table { width: 150%; table-layout: fixed; text-align: left; background:transparent; } 
+.about_td { border: 1; border-spacing: 1; padding: 1; margin: 0; border-color: transparent; background-color: !transparent; !important }
