--- a/public/css/neg.css
+++ b/public/css/neg.css
@@ -128,12 +128,10 @@ hr {
     display: block;
     height: 1px; 
     border: 0; 
-    border-top: rgba(235, 242, 246, 0.29) 1px solid; 
-    margin: 1.2em 0; 
+    margin: 1.0em 0; 
     padding: 0;
     position: relative;
-    border-top: 1px solid #eee;
-    border-bottom: 1px solid #fff;
+    border-top: 1px solid #445555;
 }
 
 abbr { font-size: 85%; font-weight: bold; color: #555; text-transform: uppercase; }
