add link to github

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -28,6 +28,9 @@
       <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
     </nav>
 
+    <hr>
+    <a class="sidebar-nav-item" href="https://github.com/neg-serg">Code</a>
+    <p>
     <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
   </div>
 </div>
