--- a/public/css/neg.css
+++ b/public/css/neg.css
@@ -233,6 +233,7 @@ a.sidebar-nav-item:focus { text-decoration: underline; }
  * page is wrapped in `.page` and is only used on the page layout.
  */
 .page, .post { margin-bottom: 4em; }
+/*.page, .post { margin-bottom: 4em; margin: -2em; padding: 1em; border: 1px solid #223333;}*/
 .page-title, .post-title, .post-title a { color: #6a8c8c; }
 .page-title, .post-title { margin-top: 0; }
 /* Meta data line below post title */
@@ -271,7 +272,7 @@ a.sidebar-nav-item:focus { text-decoration: underline; }
  * Super small header above the content for site name and short description.
  */
 
-.masthead { padding-top:    1rem; padding-bottom: 1rem; margin-bottom: 3rem; }
+.masthead { padding-top: 1rem; padding-bottom: 1rem; margin-bottom: 3rem; }
 .masthead-title { margin-top: 0; margin-bottom: 0; color: #505050; }
 .masthead-title a { color: #505050; }
 .masthead-title small { font-size: 75%; font-weight: 400; color: #c0c0c0; letter-spacing: 0; }
