experimental add adsense

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,7 @@
       {{ content }}
       {% include disqus.html %}
       {% include google_analytics.html %}
+      {% include adsense.html %}
   </div>
 
   </body>
