--- a/public/css/neg.css
+++ b/public/css/neg.css
@@ -23,7 +23,7 @@ html { font-family: "iosevka2", Helvetica, Arial, sans-serif; line-height: 1.35;
 body { 
     color: #a0aaaa; 
     background-color: #000000; 
-    background: url('/images/bg.png');
+    background: url('/images/bg.jpg');
     background-clip: border-box !important;
     background-origin: padding-box !important;
     background-attachment: fixed !important;
@@ -239,12 +239,8 @@ a.sidebar-nav-item:focus { text-decoration: underline; }
 /* Meta data line below post title */
 .post-date { display: block; margin-top: -.5rem; margin-bottom: 1rem; color: #9a9a9a; }
 
-/*
- * Custom type
- * Extend paragraphs with `.lead` for larger introductory text.
- */
+/* Custom type Extend paragraphs with `.lead` for larger introductory text. */
 .lead { font-size: 1.25rem; font-weight: 300; }
-
 
 /* Related posts */
 .related { padding-top: 2rem; padding-bottom: 2rem; border-top: 1px solid #eee; }
@@ -267,11 +263,7 @@ a.sidebar-nav-item:focus { text-decoration: underline; }
 .content a, .theme-base-0b .related-posts li a:hover { color: #6a8c8c; }
 .content a, .related-posts li a:hover { color: #6a8c8c; }
 
-/*
- * Masthead
- * Super small header above the content for site name and short description.
- */
-
+/* Masthead Super small header above the content for site name and short description. */
 .masthead { padding-top: 1rem; padding-bottom: 1rem; margin-bottom: 3rem; }
 .masthead-title { margin-top: 0; margin-bottom: 0; color: #505050; }
 .masthead-title a { color: #505050; }
