--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,9 @@
 <head>
+  <div style="display: none" id="hideAll">&nbsp;</div>
+  <!-- ONLOAD -->
+  <script type="text/javascript">
+      document.getElementById("hideAll").style.display = "block";
+  </script> 
   <link href="http://gmpg.org/xfn/11" rel="profile">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
@@ -23,4 +28,8 @@
 
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
+  <script>
+      window.onload = function() 
+      { document.getElementById("hideAll").style.display = "none"; }
+  </script>
 </head>
