--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,5 @@
 <head>
+  <style> body {background-color:black;} </style>
   <div style="display: none" id="hideAll">&nbsp;</div>
   <!-- ONLOAD -->
   <script type="text/javascript">
