initial commit for tagcloud

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -30,6 +30,7 @@
     <hr>
     <a class="sidebar-nav-item" href="https://github.com/neg-serg">~/dev/src/github</a>
     <p>
+    {% include tags.html %}
     <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
   </div>
 </div>
