--- a/public/css/neg.css
+++ b/public/css/neg.css
@@ -297,3 +297,28 @@ img {
 .img_noborder { border: 1px solid; border-color: #1f3b4f; }
 .about_table { width: 150%; table-layout: fixed; text-align: left; background:transparent; } 
 .about_td { border: 1; border-spacing: 1; padding: 1; margin: 0; border-color: transparent; background-color: !transparent; !important }
+
+// for tag cloud and archives
+.tag-cloud {
+    list-style: none;
+    padding: 0;
+    text-align: justify; 
+    font-size: 16px;
+    li {
+        display: inline-block;
+        margin: 0 12px 12px 0; 
+    }
+}
+#archives {
+    padding: 5px;
+}
+.archive-group {
+    margin: 5px;
+    border-top: 1px solid #ddd;
+}
+.archive-item {
+    margin-left: 5px;
+}
+.post-tags {
+    text-align: right;
+}
