--- a/_includes/tags.html
+++ b/_includes/tags.html
@@ -4,7 +4,7 @@
     {
       "text":"{{ tag[0] }}",
       "size":{{ tag[1].size }},
-      "url":"{{ site.url }}/tag/{{tag[0]}}"
+      "url":"{{ site.url }}/tags/{{tag[0]}}"
      }
   {% unless forloop.last %},{% endunless %}
   {% endfor %}
