--- a/_includes/tag-cloud.html
+++ b/_includes/tag-cloud.html
@@ -28,7 +28,7 @@
             .data(words)
             .enter().append("text")
             .style("font-size", function (d) { return d.size + "px"; })
-            .style("font-family", "Ubuntu")
+            .style("font-family", "Iosevka")
             .style("fill", function(d, i) { return fill(i); })
             .style("color", "#fff")
             .style("cursor", "pointer")
