--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 
   <body class="theme-base-0b">
 
-    {% include sidebar.html %}
+    <!-- {% include sidebar.html %} -->
 
     <div class="content container">
       {{ content }}
