--- a/public/css/neg.css
+++ b/public/css/neg.css
@@ -188,45 +188,45 @@ a.pagination-item:hover { background-color: #f5f5f5; }
 .gist-file { border: 1px solid #333 !important; }
 .gist-meta { background-color: #222 !important; }
 
-.sidebar {
-    text-align: center;
-    padding: 2rem 1rem;
-    background-color: #111111;
-    background-image: url('/images/sidebar_bg.jpg'); !important
-    background-origin: padding-box !important;
-    background-repeat: no-repeat !important;
-    background-size: cover !important;
-    background-position: center top !important;
-    overflow: auto;
-}
+/* .sidebar { */
+/*     text-align: center; */
+/*     padding: 2rem 1rem; */
+/*     background-color: #111111; */
+/*     background-image: url('/images/sidebar_bg.jpg'); !important */
+/*     background-origin: padding-box !important; */
+/*     background-repeat: no-repeat !important; */
+/*     background-size: cover !important; */
+/*     background-position: center top !important; */
+/*     overflow: auto; */
+/* } */
 
-@media (min-width: 48em) {
-    .sidebar { position: fixed; top: 0; left: 0; bottom: 0; width: 18rem; text-align: left; }
-}
-.sidebar a { color: #6a8c8c; text-decoration: none; }
+/* @media (min-width: 48em) { */
+/*     .sidebar { position: fixed; top: 0; left: 0; bottom: 0; width: 18rem; text-align: left; } */
+/* } */
+/* .sidebar a { color: #6a8c8c; text-decoration: none; } */
 
-/* About section */
-.sidebar-about h1 {
-    color: #6a8c8c;
-    margin-top: 0;
-    font-family: 'iosevka2', serif;
-    font-size: 2.25rem;
-}
+/* /1* About section *1/ */
+/* .sidebar-about h1 { */
+/*     color: #6a8c8c; */
+/*     margin-top: 0; */
+/*     font-family: 'iosevka2', serif; */
+/*     font-size: 2.25rem; */
+/* } */
 
-.sidebar-nav { margin-bottom: 1rem; }
-.sidebar-nav-item { display: block; line-height: 1.75; }
-a.sidebar-nav-item:hover,
-a.sidebar-nav-item:focus { text-decoration: underline; }
-.sidebar-nav-item.active { font-weight: bold; }
+/* .sidebar-nav { margin-bottom: 1rem; } */
+/* .sidebar-nav-item { display: block; line-height: 1.75; } */
+/* a.sidebar-nav-item:hover, */
+/* a.sidebar-nav-item:focus { text-decoration: underline; } */
+/* .sidebar-nav-item.active { font-weight: bold; } */
 
-@media (min-width: 48em) {
-    .sidebar-sticky {
-        /*position: absolute;*/ /* to draw bottom */
-        right:  1rem;
-        bottom: 1rem;
-        left:   1rem;
-    }
-}
+/* @media (min-width: 48em) { */
+/*     .sidebar-sticky { */
+/*         /*position: absolute;*/ /1* to draw bottom *1/ */
+/*         right:  1rem; */
+/*         bottom: 1rem; */
+/*         left:   1rem; */
+/*     } */
+/* } */
 
 .content { padding-top: 4rem; padding-bottom: 4rem; }
 @media (min-width: 48em) {
@@ -259,7 +259,7 @@ a.sidebar-nav-item:focus { text-decoration: underline; }
 .related-posts li a:hover small { color: inherit; }
 
 @media (min-width: 48em) {
-    .layout-reverse .sidebar { left: auto; right: 0; }
+    /* .layout-reverse .sidebar { left: auto; right: 0; } */
     .layout-reverse .content { margin-left: 2rem; margin-right: 20rem; }
 }
 
@@ -267,7 +267,7 @@ a.sidebar-nav-item:focus { text-decoration: underline; }
     .layout-reverse .content { margin-left: 4rem; margin-right: 22rem; }
 }
 
-.sidebar { background-color: #00000; }
+/* .sidebar { background-color: #00000; } */
 .content a, .theme-base-0b .related-posts li a:hover { color: #6a8c8c; }
 .content a, .related-posts li a:hover { color: #6a8c8c; }
 
